corrections.footer.header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <div class="header-inner">
           <nav class="header-nav">
@@ -243,7 +243,7 @@
         </div>
       </section>
     </main>
-    <footer class="background-footer">
+    <footer class="footer">
       <div class="container"></div>
       <a class="logo-down" href="./index.html"
         >Web<span class="logo-accent-down">Studio</span></a
