--- a/index.html
+++ b/index.html
@@ -64,32 +64,32 @@
       <section class="section-principles">
         <div class="container">
           <!-- hide this title visually -->
-          <h2 class="title-visually-hidden">
+          <h2 class="principles-title visually-hidden">
             Guiding principles in work and activities
           </h2>
           <ul class="principles-list">
-            <li>
+            <li class="principles-name">
               <h3 class="title-of-principles">Strategy</h3>
               <p class="text-principles">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="principles-name">
               <h3 class="title-of-principles">Punctuality</h3>
               <p class="text-principles">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="principles-name">
               <h3 class="title-of-principles">Diligence</h3>
               <p class="text-principles">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="principles-name">
               <h3 class="title-of-principles">Technologies</h3>
               <p class="text-principles">
                 Design practice focused on digital experiences. We bring forth a
@@ -114,7 +114,7 @@
             Product Designer"
                 />
                 <h3 class="team-member">Mark Guerrero</h3>
-                <p class="profession-team-member">Product Designer</p>
+                <p class="team-member-text">Product Designer</p>
               </div>
             </li>
             <li class="team-name">
@@ -126,7 +126,7 @@
                   alt="photo Frontend Developer"
                 />
                 <h3 class="team-member">Tom Ford</h3>
-                <p class="profession-team-member">Frontend Developer</p>
+                <p class="team-member-text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-name">
@@ -138,7 +138,7 @@
                   alt="photo Marketing"
                 />
                 <h3 class="team-member">Camila Garcia</h3>
-                <p class="profession-team-member">Marketing</p>
+                <p class="team-member-text">Marketing</p>
               </div>
             </li>
             <li class="team-name">
@@ -150,7 +150,7 @@
                   alt="photo UI Designer"
                 />
                 <h3 class="team-member">Daniel Wilson</h3>
-                <p class="profession-team-member">UI Designer</p>
+                <p class="team-member-text">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -164,6 +164,7 @@
             <li class="portfolio-name">
               <div class="portfolio">
                 <img
+                  class="portfolio-images"
                   src="./images/portfolio/img-project-card-1.jpg"
                   alt="photo Banking App"
                   width="360"
@@ -177,6 +178,7 @@
             <li class="portfolio-name">
               <div class="portfolio">
                 <img
+                  class="portfolio-images"
                   src="./images/portfolio/img-project-card-2.jpg"
                   alt="photo Cashless Payment"
                   width="360"
@@ -190,6 +192,7 @@
             <li class="portfolio-name">
               <div class="portfolio">
                 <img
+                  class="portfolio-images"
                   src="./images/portfolio/img-project-card-3.jpg"
                   alt="photo Meditation App"
                   width="360"
@@ -203,6 +206,7 @@
             <li class="portfolio-name">
               <div class="portfolio">
                 <img
+                  class="portfolio-images"
                   src="./images/portfolio/img-project-card-4.jpg"
                   alt="photo Taxi Service"
                   width="360"
@@ -216,6 +220,7 @@
             <li class="portfolio-name">
               <div class="portfolio">
                 <img
+                  class="portfolio-images"
                   src="./images/portfolio/img-project-card-5.jpg"
                   alt="photo Screen Illustrations"
                   width="360"
@@ -229,6 +234,7 @@
             <li class="portfolio-name">
               <div class="portfolio">
                 <img
+                  class="portfolio-images"
                   src="./images/portfolio/img-project-card-6.jpg"
                   alt="photo Online Courses"
                   width="360"
