--- a/index.html
+++ b/index.html
@@ -105,50 +105,50 @@
           <h2 class="title-section-three">Our team</h2>
           <ul class="team-list">
             <li class="team-name">
-              <div class="team">
-                <img
-                  class="team-images"
-                  src="./images/img1.jpg"
-                  width="264"
-                  alt="photo
+              <img
+                class="team-images"
+                src="./images/img1.jpg"
+                width="264"
+                alt="photo
             Product Designer"
-                />
+              />
+              <div class="team">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="team-member-text">Product Designer</p>
               </div>
             </li>
             <li class="team-name">
+              <img
+                class="team-images"
+                src="./images/img2.jpg"
+                width="264"
+                alt="photo Frontend Developer"
+              />
               <div class="team">
-                <img
-                  class="team-images"
-                  src="./images/img2.jpg"
-                  width="264"
-                  alt="photo Frontend Developer"
-                />
                 <h3 class="team-member">Tom Ford</h3>
                 <p class="team-member-text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-name">
+              <img
+                class="team-images"
+                src="./images/img3.jpg"
+                width="264"
+                alt="photo Marketing"
+              />
               <div class="team">
-                <img
-                  class="team-images"
-                  src="./images/img3.jpg"
-                  width="264"
-                  alt="photo Marketing"
-                />
                 <h3 class="team-member">Camila Garcia</h3>
                 <p class="team-member-text">Marketing</p>
               </div>
             </li>
             <li class="team-name">
+              <img
+                class="team-images"
+                src="./images/img4.jpg"
+                width="264"
+                alt="photo UI Designer"
+              />
               <div class="team">
-                <img
-                  class="team-images"
-                  src="./images/img4.jpg"
-                  width="264"
-                  alt="photo UI Designer"
-                />
                 <h3 class="team-member">Daniel Wilson</h3>
                 <p class="team-member-text">UI Designer</p>
               </div>
@@ -162,87 +162,75 @@
           <h2 class="title-section-four">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-name">
-              <div class="portfolio">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/img-project-card-1.jpg"
-                  alt="photo Banking App"
-                  width="360"
-                />
-                <div class="portfolio-text">
-                  <h3 class="functionality">Banking App</h3>
-                  <p class="functionality-type">App</p>
-                </div>
+              <img
+                class="portfolio-images"
+                src="./images/portfolio/img-project-card-1.jpg"
+                alt="photo Banking App"
+                width="360"
+              />
+              <div class="portfolio-text">
+                <h3 class="functionality">Banking App</h3>
+                <p class="functionality-type">App</p>
               </div>
             </li>
             <li class="portfolio-name">
-              <div class="portfolio">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/img-project-card-2.jpg"
-                  alt="photo Cashless Payment"
-                  width="360"
-                />
-                <div class="portfolio-text">
-                  <h3 class="functionality">Cashless Payment</h3>
-                  <p class="functionality-type">Marketing</p>
-                </div>
+              <img
+                class="portfolio-images"
+                src="./images/portfolio/img-project-card-2.jpg"
+                alt="photo Cashless Payment"
+                width="360"
+              />
+              <div class="portfolio-text">
+                <h3 class="functionality">Cashless Payment</h3>
+                <p class="functionality-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-name">
-              <div class="portfolio">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/img-project-card-3.jpg"
-                  alt="photo Meditation App"
-                  width="360"
-                />
-                <div class="portfolio-text">
-                  <h3 class="functionality">Meditation App</h3>
-                  <p class="functionality-type">App</p>
-                </div>
+              <img
+                class="portfolio-images"
+                src="./images/portfolio/img-project-card-3.jpg"
+                alt="photo Meditation App"
+                width="360"
+              />
+              <div class="portfolio-text">
+                <h3 class="functionality">Meditation App</h3>
+                <p class="functionality-type">App</p>
               </div>
             </li>
             <li class="portfolio-name">
-              <div class="portfolio">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/img-project-card-4.jpg"
-                  alt="photo Taxi Service"
-                  width="360"
-                />
-                <div class="portfolio-text">
-                  <h3 class="functionality">Taxi Service</h3>
-                  <p class="functionality-type">Marketing</p>
-                </div>
+              <img
+                class="portfolio-images"
+                src="./images/portfolio/img-project-card-4.jpg"
+                alt="photo Taxi Service"
+                width="360"
+              />
+              <div class="portfolio-text">
+                <h3 class="functionality">Taxi Service</h3>
+                <p class="functionality-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-name">
-              <div class="portfolio">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/img-project-card-5.jpg"
-                  alt="photo Screen Illustrations"
-                  width="360"
-                />
-                <div class="portfolio-text">
-                  <h3 class="functionality">Screen Illustrations</h3>
-                  <p class="functionality-type">Design</p>
-                </div>
+              <img
+                class="portfolio-images"
+                src="./images/portfolio/img-project-card-5.jpg"
+                alt="photo Screen Illustrations"
+                width="360"
+              />
+              <div class="portfolio-text">
+                <h3 class="functionality">Screen Illustrations</h3>
+                <p class="functionality-type">Design</p>
               </div>
             </li>
             <li class="portfolio-name">
-              <div class="portfolio">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/img-project-card-6.jpg"
-                  alt="photo Online Courses"
-                  width="360"
-                />
-                <div class="portfolio-text">
-                  <h3 class="functionality">Online Courses</h3>
-                  <p class="functionality-type">Marketing</p>
-                </div>
+              <img
+                class="portfolio-images"
+                src="./images/portfolio/img-project-card-6.jpg"
+                alt="photo Online Courses"
+                width="360"
+              />
+              <div class="portfolio-text">
+                <h3 class="functionality">Online Courses</h3>
+                <p class="functionality-type">Marketing</p>
               </div>
             </li>
           </ul>
@@ -250,14 +238,15 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container"></div>
-      <a class="logo-down" href="./index.html"
-        >Web<span class="logo-accent-down">Studio</span></a
-      >
-      <p class="guideline">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo-down" href="./index.html"
+          >Web<span class="logo-accent-down">Studio</span></a
+        >
+        <p class="guideline">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
