--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="container">
         <div class="header-inner">
@@ -52,12 +53,9 @@
       <!-- Section 1 -->
       <section class="hero-section">
         <div class="container">
-          <div class="hero-inner">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <div class="hero-button">
-              <button class="button" type="button">Order Service</button>
-            </div>
-          </div>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+
+          <button class="button" type="button">Order Service</button>
         </div>
       </section>
       <!-- Section 2 -->
