--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container">
         <div class="header-inner">
-          <nav class="header-nav">
+          <nav class="nav">
             <a class="logo-up" href="./index.html"
               >Web<span class="logo-accent-up">Studio</span></a
             >
