--- a/index.html
+++ b/index.html
@@ -20,33 +20,31 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <nav class="nav">
-            <a class="logo-up" href="./index.html"
-              >Web<span class="logo-accent-up">Studio</span></a
-            >
-            <ul class="nav-list">
-              <li><a class="nav-link" href="./index.html">Studio</a></li>
-              <li><a class="nav-link" href="">Portfolio</a></li>
-              <li><a class="nav-link" href="">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="mail-contacts">
-            <ul class="header-contacts">
-              <li>
-                <a class="addres-mail-contacts" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="addres-mail-contacts" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="header-inner-container">
+        <nav class="nav">
+          <a class="logo-up" href="./index.html"
+            >Web<span class="logo-accent-up">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link" href="">Portfolio</a></li>
+            <li><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="mail-contacts">
+          <ul class="header-contacts">
+            <li>
+              <a class="addres-mail-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="addres-mail-contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
