divided. header-inner and container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="header-inner-container">
+      <div class="header-inner container">
         <nav class="nav">
           <a class="logo-up" href="./index.html"
             >Web<span class="logo-accent-up">Studio</span></a
